--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/index.js",
-    "dev": "nodemon server/index.js"
-  },
-  "engines": {
-    "node": "v18.12.1"
+    "start": "node server/index.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +19,6 @@
   },
   "homepage": "https://github.com/saraxstrenger/seniordesign#readme",
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "express": "^4.18.2"
   }
 }
