--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   "homepage": "https://github.com/saraxstrenger/seniordesign#readme",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.289.0",
+    "@aws-sdk/credential-providers": "^3.290.0",
     "@aws-sdk/lib-dynamodb": "^3.289.0",
-    "aws-sdk": "^2.1333.0",
+    "aws-sdk": "^2.1334.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.17.3"
