--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.20.1",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
+    "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
