--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.20.1",
     "classnames": "^2.3.2",
     "framer-motion": "^10.8.5",
+    "highcharts": "^10.3.3",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
