--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "classnames": "^2.3.2",
     "framer-motion": "^10.8.5",
     "highcharts": "^10.3.3",
+    "highcharts-accessibility": "^0.1.7",
+    "highcharts-react-official": "^3.2.0",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
