--- a/RecServer/Makefile
+++ b/RecServer/Makefile
@@ -1,4 +1,4 @@
-TARGETS = bin/rec_server bin/test_client
+TARGETS = rec_server test_client
 
 SERVER = rec_server.o
 CLIENT = test_client.o
@@ -10,10 +10,10 @@ all: $(TARGETS)
 	g++ $^ --std=c++11 -g -c -o $@
 
 rec_server: $(SERVER) 
-	g++ $^ --std=c++11 -lresolv -lpthread -g -o bin/$@
+	g++ $^ --std=c++11 -lresolv -lpthread -g -o $@
 
 test_client: $(CLIENT)
-	g++ $^ --std=c++11 -lresolv -lpthread -g -o bin/$@
+	g++ $^ --std=c++11 -lresolv -lpthread -g -o $@
 
 clean::
 	rm -fv $(TARGETS) *~ $(OBJS)
