--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "highcharts": "^10.3.3",
     "highcharts-accessibility": "^0.1.7",
     "highcharts-react-official": "^3.2.0",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
