--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "aws": "^0.0.3-2",
     "aws-sdk": "^2.1339.0",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "fetch": "^1.1.0",
