--- a/package.json
+++ b/package.json
@@ -27,15 +27,20 @@
     "aws-sdk": "^2.1339.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
+    "csvtojson": "^2.0.10",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "fetch": "^1.1.0",
     "fs": "^0.0.1-security",
     "json": "^11.0.0",
+    "natural": "^6.2.0",
     "promise": "^8.3.0",
     "react-card-flip": "^1.2.0",
     "react-icons": "^4.8.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "stemmer": "^2.0.1",
+    "stopword": "^2.0.8",
+    "stopwords": "^0.0.9"
   }
 }
