--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "highcharts-accessibility": "^0.1.7",
     "highcharts-react-official": "^3.2.0",
     "js-cookie": "^3.0.1",
+    "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
