--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.0",
+    "react-chevron": "^1.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.2",
