--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "natural": "^6.2.0",
     "promise": "^8.3.0",
     "react-card-flip": "^1.2.0",
+    "react-chevron": "^1.1.1",
     "react-icons": "^4.8.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
