--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@aws-sdk/client-dynamodb": "^3.289.0",
     "@aws-sdk/credential-providers": "^3.290.0",
     "@aws-sdk/lib-dynamodb": "^3.289.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "aws": "^0.0.3-2",
     "aws-sdk": "^2.1339.0",
     "cookie-parser": "^1.4.6",
