--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ajv-errors": "^3.0.0",
     "body-parser": "^1.20.1",
     "classnames": "^2.3.2",
+    "fortawesome": "^0.0.1-security",
     "framer-motion": "^10.8.5",
     "highcharts": "^10.3.3",
     "highcharts-accessibility": "^0.1.7",
@@ -20,6 +23,7 @@
     "react-card-flip": "^1.2.0",
     "react-chevron": "^1.1.1",
     "react-dom": "^18.2.0",
+    "react-fontawesome": "^1.7.1",
     "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.8.1",
